2.9.1
 - enh: add button "Find best spacing" in Plot tab in Analysis View
   that iteratively finds sane spacing values (#110)
 - enh: notify user in plot if contour spacing is too large (#110)
 - fix: mysterious behavior of subclassed pg.ColorBarItem (#109)
2.9.0
 - feat: add support for extensions in the form of loading dclab
   plugin and machine-learning features (#85)
 - setup: drop support for Python 3.7
 - setup: bump dclab from 0.37.2 to 0.39.1
2.8.1
 - fix: wrong scale for viscosity in bulk emodulus computation (#104)
 - fix: save unused polygon filters in sessions (#101)
 - fix: allow to delete polygon filters (#100)
 - setup: bump dclab from 0.37.0 to 0.37.2 (enhanced speed for
   operations involving contour computation)
2.8.0
 - BREAKING CHANGE: The volume feature in all previous versions was
   overestimated by about 2µm³. Please re-run your analysis pipeline.
 - setup: bump pyqtgraph from 0.12.2 to 0.12.3
 - setup: bump dclab from 0.36.1 to 0.37.0 (faulty volume computation)
2.7.4
 - setup: bump dclab from 0.35.6 to 0.36.1 (improved export speed)
2.7.3
 - build: remove console window (#102)
2.7.2
 - setup: bump dclab from 0.35.4 to 0.35.6 (Young's modulus could
   not be computed in some cases)
2.7.1
 - enh: display online polygon filters in metadata tab (#94)
 - enh: show user configuration section in metadata tab (#86)
 - setup: bump dclab from 0.34.3 to 0.35.4
 - tests: change test data to avoid warnings in dclab 0.35.0
2.7.0
 - feat: accept DCOR drag events from DCOR-Aid data browser
2.6.9
 - fix: don't reset color and name of dataset during duplicate
   matrix action (#96)
2.6.8
 - fix: adapt color scheme to work in dark mode (#92)
2.6.7
 - fix: correctly handle missing features on data export (#80)
 - ref: cleanup (default arguments and PyQt5 object references)
 - setup: bump dclab from 0.34.2 to 0.34.3 (set R_HOME)
 - build: bump rpy2 from 3.4.2 to 3.4.5
 - build: bump pyqtgraph from 0.12.1 to 0.12.2 and remove
   colorbar export workarounds